--- a/assets/styles/frontend/common/core/form/btn.less
+++ b/assets/styles/frontend/common/core/form/btn.less
@@ -88,13 +88,13 @@
 
     @btn-big-height: 42px;
     @btn-big-padding-horizontal: 32px;
-    @btn-large-font-size: @font-size-small;
+    @btn-big-font-size: @font-size-small;
 
     &--big  {
         min-height: @btn-big-height;
         padding: 0 @btn-big-padding-horizontal;
 
-        font-size: @btn-large-font-size;
+        font-size: @btn-big-font-size;
     }
 
     &--full-width {
