--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -1,5 +1,5 @@
 @box-detail-info-width: 500px;
-@box-detail-info-width-small: 400px;
+@box-detail-info-width-small: 420px;
 @box-detail-info-gap: 80px;
 @box-detail-info-gap-small: 40px;
 @box-detail-content-width: calc(~"100% - (@{box-detail-info-width} + @{box-detail-info-gap})");
@@ -137,10 +137,14 @@
     }
 
     &__add-basket {
-        padding: 50px 50px 20px;
+        padding: 50px 20px 20px;
 
         border-radius: @radius;
         background-color: @color-box;
+
+        @media @query-vl {
+            padding: 50px 50px 20px;
+        }
 
         &__message {
             margin: -40px -40px 40px;
