--- a/assets/styles/frontend/common/components/form/input-spinbox.less
+++ b/assets/styles/frontend/common/components/form/input-spinbox.less
@@ -18,6 +18,11 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), inset 0 1px 2px rgba(0, 0, 0, 0.3);
     background-color: @color-f;
 
+    &--secondary {
+        border: 1px solid @color-border-dark;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), inset 0 1px 2px rgba(0, 0, 0, 0.2);
+    }
+
     .box-detail-sets & {
         display: none;
     }
