--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -88,118 +88,117 @@
                         </div>
                     {% endif %}
 
-                    <div itemprop="offers" itemscope itemtype="http://schema.org/Offer" class="box-detail-add__prices">
-                        {% if not product.isMainVariant %}
-                            {% if product.isRegistrationDiscountDisabled and registrationDiscountExclusionText is not empty %}
-                                <div class="in-message--info">
-                                    {{ registrationDiscountExclusionText }}
-                                </div>
+                    <div class="box-detail-add">
+                        <div itemprop="offers" itemscope itemtype="http://schema.org/Offer" class="box-detail-add__prices">
+                            {% if not product.isMainVariant %}
+                                {% if product.isRegistrationDiscountDisabled and registrationDiscountExclusionText is not empty %}
+                                    <div class="in-message--info">
+                                        {{ registrationDiscountExclusionText }}
+                                    </div>
+                                {% endif %}
+                                {{ self.productPrice(product) }}
+                                <meta itemprop="priceCurrency" content="{{ currencyCode(domain.id) }}">
+                                <meta itemprop="price" content="{{ sellingPrice.priceWithVat|moneyFormat }}">
                             {% endif %}
-                            {{ self.productPrice(product) }}
-                            <meta itemprop="priceCurrency" content="{{ currencyCode(domain.id) }}">
-                            <meta itemprop="price" content="{{ sellingPrice.priceWithVat|moneyFormat }}">
-                        {% endif %}
-                        <link itemprop="availability"
-                            href="{{ product.calculatedSellingDenied ? 'http://schema.org/OutOfStock' : 'http://schema.org/InStock' }}">
-                    </div>
-
-                    {% if not product.isMainVariant and product.calculatedAvailability %}
-                        {% include 'Front/Inline/Product/detailAvailability.html.twig' with { product: product } %}
-                    {% endif %}
-
-                    {% if product.isMainVariant and not product.calculatedSellingDenied %}
-                        <table {% if getProductSellingPrice(product) is not null %}itemprop="offers"
-                            itemscope
-                            itemtype="http://schema.org/AggregateOffer" {% endif %}
-                            class="table-variants"
-                        >
-                            <thead>
-                            <tr class="table-variants__row">
-                                <th class="table-variants__cell table-variants__cell--image"></th>
-                                <th class="table-variants__cell table-variants__cell--name">{{ 'Name'|trans }}</th>
-                                <th class="table-variants__cell table-variants__cell--price">
-                                    {{ 'Price including VAT'|trans }}
-                                    {% if getProductSellingPrice(product) is not null %}
-                                        <meta itemprop="priceCurrency"
-                                            content="{{ currencyCode(domain.id) }}"
-                                        >
-                                        <meta itemprop="lowPrice"
-                                            content="{{ getProductSellingPrice(product).priceWithVat|moneyFormat }}"
-                                        >
-                                        <link itemprop="availability"
-                                            href="{{ product.calculatedSellingDenied ? 'http://schema.org/OutOfStock' : 'http://schema.org/InStock' }}"
-                                        >
-                                    {% endif %}
-                                </th>
-                                <th class="table-variants__cell">{{ 'Dostupnost'|trans }}</th>
-                                <th class="table-variants__cell">{{ 'Kód produktu'|trans }}</th>
-                                <th class="table-variants__cell">{{ 'Parametry'|trans }}</th>
-                                <th class="table-variants__cell table-variants__cell--action"></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for variant in filterOnlyVisibleVariants(product) %}
-                                <tr class="table-variants__row">
-                                    <td class="table-variants__cell table-variants__cell--image">
-                                        <div class="table-variants__cell__image">
-                                            {% if imageExists(variant) %}
-                                                <a href="{{ imageUrl(variant, 'original') }}" class="js-popup-image">
-                                                    {{ image(variant, { size: 'thumbnail' }) }}
-                                                </a>
-                                            {% else %}
-                                                {{ noimage() }}
-                                            {% endif %}
-                                        </div>
-                                    </td>
-                                    <td class="table-variants__cell table-variants__cell--name">
-                                        {% if variant.variantAlias is not null %}
-                                            {{ variant.variantAlias }}
-                                        {% else %}
-                                            {{ variant.name }}
-                                        {% endif %}
-                                    </td>
-                                    <td class="table-variants__cell table-variants__cell--price">
-                                        {{ self.productPrice(variant) }}
-                                    </td>
-                                    <td class="table-variants__cell">
-                                        {% include 'Front/Inline/Product/detailAvailability.html.twig' with { product: variant, variants: {} } %}
-                                    </td>
-                                    <td class="table-variants__cell">
-                                        {{ variant.catnum }}
-                                    </td>
-                                    <td>
-                                        {% set productParameterValues = getProductParameterValues(variant) %}
-                                        {% for productParameterValue in productParameterValues %}
-                                            {{ productParameterValue.parameter.name }}:
-                                            {{ productParameterValue.value.text }}
-                                        {% endfor %}
-                                    </td>
-                                    <td>
-                                        {% if variant.isRegistrationDiscountDisabled and registrationDiscountExclusionText is not empty %}
-                                            <div class="in-message--info">
-                                                {{ registrationDiscountExclusionText }}
-                                            </div>
-                                        {% endif %}
-                                    </td>
-                                    <td class="table-variants__cell table-variants__cell--action">
-                                        {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: variant, type: 'small'})) }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    {% endif %}
-                    {% if not product.isMainVariant %}
-                        <div class="box-detail-add js-product-detail-main-add-to-cart-wrapper">
-                            {% if not product.calculatedSellingDenied %}
-                                {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: product, type: 'large' })) }}
-                            {% else %}
-                                <div>
-                                    {{ 'This product is no longer available for purchase. Have a look at similar products <a href="%url%">here</a>.'|transHtml({"%url%": url('front_product_list', { id: productMainCategory.id })}) }}
-                                </div>
-                            {% endif %}
+                            <link itemprop="availability"
+                                href="{{ product.calculatedSellingDenied ? 'http://schema.org/OutOfStock' : 'http://schema.org/InStock' }}">
                         </div>
-                    {% endif %}
+
+                        {% if product.isMainVariant and not product.calculatedSellingDenied %}
+                            <table {% if getProductSellingPrice(product) is not null %}itemprop="offers"
+                                itemscope
+                                itemtype="http://schema.org/AggregateOffer" {% endif %}
+                                class="table-variants"
+                            >
+                                <thead>
+                                <tr class="table-variants__row">
+                                    <th class="table-variants__cell table-variants__cell--image"></th>
+                                    <th class="table-variants__cell table-variants__cell--name">{{ 'Name'|trans }}</th>
+                                    <th class="table-variants__cell table-variants__cell--price">
+                                        {{ 'Price including VAT'|trans }}
+                                        {% if getProductSellingPrice(product) is not null %}
+                                            <meta itemprop="priceCurrency"
+                                                content="{{ currencyCode(domain.id) }}"
+                                            >
+                                            <meta itemprop="lowPrice"
+                                                content="{{ getProductSellingPrice(product).priceWithVat|moneyFormat }}"
+                                            >
+                                            <link itemprop="availability"
+                                                href="{{ product.calculatedSellingDenied ? 'http://schema.org/OutOfStock' : 'http://schema.org/InStock' }}"
+                                            >
+                                        {% endif %}
+                                    </th>
+                                    <th class="table-variants__cell">{{ 'Dostupnost'|trans }}</th>
+                                    <th class="table-variants__cell">{{ 'Kód produktu'|trans }}</th>
+                                    <th class="table-variants__cell">{{ 'Parametry'|trans }}</th>
+                                    <th class="table-variants__cell table-variants__cell--action"></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for variant in filterOnlyVisibleVariants(product) %}
+                                    <tr class="table-variants__row">
+                                        <td class="table-variants__cell table-variants__cell--image">
+                                            <div class="table-variants__cell__image">
+                                                {% if imageExists(variant) %}
+                                                    <a href="{{ imageUrl(variant, 'original') }}" class="js-popup-image">
+                                                        {{ image(variant, { size: 'thumbnail' }) }}
+                                                    </a>
+                                                {% else %}
+                                                    {{ noimage() }}
+                                                {% endif %}
+                                            </div>
+                                        </td>
+                                        <td class="table-variants__cell table-variants__cell--name">
+                                            {% if variant.variantAlias is not null %}
+                                                {{ variant.variantAlias }}
+                                            {% else %}
+                                                {{ variant.name }}
+                                            {% endif %}
+                                        </td>
+                                        <td class="table-variants__cell table-variants__cell--price">
+                                            {{ self.productPrice(variant) }}
+                                        </td>
+                                        <td class="table-variants__cell">
+                                            {% include 'Front/Inline/Product/detailAvailability.html.twig' with { product: variant, variants: {} } %}
+                                        </td>
+                                        <td class="table-variants__cell">
+                                            {{ variant.catnum }}
+                                        </td>
+                                        <td>
+                                            {% set productParameterValues = getProductParameterValues(variant) %}
+                                            {% for productParameterValue in productParameterValues %}
+                                                {{ productParameterValue.parameter.name }}:
+                                                {{ productParameterValue.value.text }}
+                                            {% endfor %}
+                                        </td>
+                                        <td>
+                                            {% if variant.isRegistrationDiscountDisabled and registrationDiscountExclusionText is not empty %}
+                                                <div class="in-message--info">
+                                                    {{ registrationDiscountExclusionText }}
+                                                </div>
+                                            {% endif %}
+                                        </td>
+                                        <td class="table-variants__cell table-variants__cell--action">
+                                            {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: variant, type: 'small'})) }}
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        {% endif %}
+
+                        {% if not product.isMainVariant %}
+                            <div class="js-product-detail-main-add-to-cart-wrapper">
+                                {% if not product.calculatedSellingDenied %}
+                                    {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: product, type: 'large' })) }}
+                                {% else %}
+                                    <div>
+                                        {{ 'This product is no longer available for purchase. Have a look at similar products <a href="%url%">here</a>.'|transHtml({"%url%": url('front_product_list', { id: productMainCategory.id })}) }}
+                                    </div>
+                                {% endif %}
+                            </div>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
@@ -227,14 +226,18 @@
     {% set standardPrice = sellingPrice.standardPrice %}
     {# @var registeredCustomerPrice \App\Model\Product\Pricing\ProductPrice #}
     {% set registeredCustomerPrice = getProductRegisteredCustomerPrice(product) %}
-    <div class="box-detail-add__prices__item box-detail-add__prices__item--main">
-        {{ sellingPrice.priceWithVat|price }}
-    </div>
 
     {% if sellingPrice.hasHigherStandardPrice %}
         <div class="box-detail-add__prices__item box-detail-add__prices__item--old">
             {{ standardPrice.priceWithVat|price }}
         </div>
+    {% endif %}
+
+    <div class="box-detail-add__prices__item box-detail-add__prices__item--main">
+        {{ sellingPrice.priceWithVat|price }}
+    </div>
+
+    {% if sellingPrice.hasHigherStandardPrice %}
         <div class="box-detail-add__prices__item box-detail-add__prices__item--save">
             {{ 'ušetříte '|trans }} {{ sellingPrice.standardPriceDifference|price }}
         </div>
