--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -1,10 +1,10 @@
 {{ form_start(form, {attr: {class: 'js-add-product dont-print', 'data-ajax-url': url('front_cart_add_product_ajax'), 'multipleForm': true}}) }}
-    <div class="in-add-to-cart">
-        <div class="in-add-to-cart__spinbox js-spinbox-parent{% if product.realStockQuantity < 1 or product.calculatedSellingDenied or not showAmountInput %} display-none{% endif %}">
+    <div class="box-detail-add__action">
+        <div class="box-detail-add__action__spinbox js-spinbox-parent{% if product.realStockQuantity < 1 or product.calculatedSellingDenied or not showAmountInput %} display-none{% endif %}">
             <div class="in-message in-message--warning js-maximum-amount-warning display-none">
                 {{ 'Větší množství není možné nakoupit'|trans }}
             </div>
-            <span class="form-input-spinbox js-spinbox">
+            <span class="form-input-spinbox form-input-spinbox--secondary js-spinbox">
                 {{ form_widget(form.quantity, { attr: {
                     class: 'form-input-spinbox__input input-no-style js-spinbox-input',
                     'data-spinbox-min': product.realMinimumAmount,
@@ -16,12 +16,25 @@
             </span>
         </div>
 
-        {% set cssClass = '' %}
-        {% if disabled is same as (true) %}
-            {% set cssClass = 'btn--disabled ' %}
+        {% if not product.isMainVariant and product.calculatedAvailability %}
+            <div class="box-detail-add__action__availability">
+                {% include 'Front/Inline/Product/detailAvailability.html.twig' with { product: product } %}
+            </div>
         {% endif %}
+    </div>
 
-        {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'in-add-to-cart__button btn-no-style', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
+    {% set cssClass = '' %}
+    {% if disabled is same as (true) %}
+        {% set cssClass = 'btn--disabled ' %}
+    {% endif %}
 
+    <div class="box-detail-add__buttons">
+        {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'box-detail-add__buttons__item btn btn--success btn--large', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
+        <button class="box-detail-add__buttons__item btn btn--large js-not-implemented-yet">{{ 'Koupit na splátky'|trans }}</button>
+    </div>
+
+    <div class="box-detail-add__payments js-not-implemented-yet">
+        <img class="box-detail-add__payments__image" src="{{ asset('assets/frontend/images/cofidis-logo.png') }}" alt="{{ 'Cofidis'|trans }}">
+        Na splátky ještě dnes již od 260 Kč měsíčně
     </div>
 {{ form_end(form) }}
