--- a/assets/styles/frontend/common/components/in/flag.less
+++ b/assets/styles/frontend/common/components/in/flag.less
@@ -29,11 +29,7 @@
     }
 
     &--product-list {
-        bottom: -5px;
-        
-        @media @query-md {
-            bottom: -27px;
-        }
+        position: static;
     }
 
     &__item {
