--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -14,8 +14,8 @@
                                 {% if freeTransportAndPaymentFlagId is not null %}
                                     {% set productFlagIds = { 0: freeTransportAndPaymentFlagId } %}
                                 {% endif %}
-                                {{ renderFlagsByIds(productFlagIds, 'in-flag--product-list', false, productSellingPrice, productView.variantsCount) }}
                             </div>
+                            {{ renderFlagsByIds(productFlagIds, 'in-flag--product-list', false, productSellingPrice) }}
                         </a>
                         <div class="list-products__item__info">
                             <a class="list-products__item__info__link" href="{{ productView.action.detailUrl }}">
