--- a/templates/Front/Content/Product/productsWithControls.html.twig
+++ b/templates/Front/Content/Product/productsWithControls.html.twig
@@ -18,7 +18,7 @@
         
         {% if hiddenFilterFormButton is not defined %}
             <div class="box-list__filter-opener">
-                <span class="btn js-product-filter-opener">{{ 'Filtrovat produkty'|trans }}</span>
+                <span class="box-list__filter-opener__button btn js-product-filter-opener">{{ 'Filtrovat produkty'|trans }}</span>
             </div>
         {% endif %}
 
