--- a/assets/styles/frontend/common/components/in/user-text.less
+++ b/assets/styles/frontend/common/components/in/user-text.less
@@ -15,22 +15,7 @@
     font-size: @in-user-text-font-size + 1px;
 
     a {
-        position: relative;
-        display: inline;
-        padding-bottom: 10px;
-        text-decoration: none;
-
-        color: @color-base;
-        background-image: linear-gradient(to top, @color-light 1px, @color-f 100%);
-        background-position: 0 23px;
-        background-repeat: repeat-x;
-        background-size: 2px 1px;
-        transition: background-position @transition;
-
-        &:hover {
-            background-position: 0 23px;
-            transition: background-position @transition;
-        }
+        text-decoration: underline;
     }
 
     p {
