--- a/assets/styles/frontend/common/components/list/menu.less
+++ b/assets/styles/frontend/common/components/list/menu.less
@@ -275,6 +275,7 @@
                 .list-menu__submenu--children & {
                     @media @query-vl {
                         padding: 0;
+                        width: 100%;
                     }
                 }
             }
@@ -292,6 +293,23 @@
 
                 &:hover {
                     color: @list-menu-submenu-item-color;
+                }
+
+                &--level-2 {
+                    font-weight: 700;
+                    color: @color-primary;
+
+                    &:hover {
+                        color: @color-primary;
+                    }
+
+                    @media @query-vl {
+                        color: @list-menu-submenu-item-color;
+
+                        &:hover {
+                            color: @list-menu-submenu-item-color;
+                        }
+                    }
                 }
 
                 .list-menu__submenu--children & {
