--- a/src/Resources/styles/front/common/components/box/blog.less
+++ b/src/Resources/styles/front/common/components/box/blog.less
@@ -3,6 +3,8 @@
 @box-blog-panel-gap: 50px;
 @box-blog-padding: 30px;
 @box-blog-title-bottom-gap: 20px;
+@box-blog-list-inset-gap: 14px;
+@box-blog-subcategory-gap: 10px;
 
 .box-blog {
     display: flex;
@@ -92,7 +94,7 @@
         margin-bottom: 0;
         padding: @box-blog-padding @box-blog-padding 52px;
 
-        background-color: @color-base;
+        background: @color-base url('@{path-design}/fish-corner-right-bottom.png') calc(~"100% - 27px") calc(~"100% - 20px") no-repeat;
         border-radius: @radius;
 
         &__title {
@@ -110,7 +112,7 @@
             .svg;
             position: relative;
             padding: 12px 35px;
-            margin: 0 -14px;
+            margin: 0 -@box-blog-list-inset-gap;
 
             color: @color-f;
             font-size: 16px;
@@ -139,6 +141,22 @@
                 &:before {
                     color: @color-add;
                 }
+            }
+
+            &--level-2 {
+                margin-left: -@box-blog-list-inset-gap + @box-blog-subcategory-gap;
+            }
+
+            &--level-3 {
+                margin-left: -@box-blog-list-inset-gap + @box-blog-subcategory-gap * 2;
+            }
+
+            &--level-4 {
+                margin-left: -@box-blog-list-inset-gap + @box-blog-subcategory-gap * 3;
+            }
+
+            &--level-5 {
+                margin-left: -@box-blog-list-inset-gap + @box-blog-subcategory-gap * 4;
             }
         }
     }
