design: remove fish background and add gap for image

--- a/src/Resources/styles/front/common/components/box/blog.less
+++ b/src/Resources/styles/front/common/components/box/blog.less
@@ -94,7 +94,7 @@
         margin-bottom: 0;
         padding: @box-blog-padding @box-blog-padding 52px;
 
-        background: @color-base url('@{path-design}/fish-corner-right-bottom.png') calc(~"100% - 27px") calc(~"100% - 20px") no-repeat;
+        background-color: @color-base;
         border-radius: @radius;
 
         &__title {
