--- a/src/Resources/styles/front/common/components/list/articles-blog.less
+++ b/src/Resources/styles/front/common/components/list/articles-blog.less
@@ -27,9 +27,11 @@
         &__image {
             width: 100%;
             text-align: center;
+            margin-bottom: 10px;
 
             @media @query-md {
                 width: @list-articles-blog-item-image-width;
+                margin-bottom: 0;
             }
 
             @media @query-xl {
