--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -52,6 +52,7 @@
 //// wrap
 @import "components/wrap/article.less";
 @import "components/wrap/box.less";
+@import "components/wrap/gradient.less";
 @import "components/wrap/well.less";
 
 //// in
@@ -110,6 +111,7 @@
 @import "components/list/socials.less";
 @import "components/list/stores.less";
 @import "components/list/tags.less";
+@import "components/list/tags-secondary.less";
 @import "components/list/top-products.less";
 @import "components/list/variants.less";
 
