design: add style for product slider

--- a/assets/styles/frontend/common/components/box/gallery.less
+++ b/assets/styles/frontend/common/components/box/gallery.less
@@ -27,7 +27,7 @@
         justify-content: center;
         max-width: @box-gallery-images-width;
         min-height: @box-gallery-item-size;
-        margin-bottom: 20px;
+        margin-bottom: -@box-gallery-item-gap;
         margin-left: -@box-gallery-item-gap;
     }
 
