--- a/assets/styles/frontend/common/components/in/flag.less
+++ b/assets/styles/frontend/common/components/in/flag.less
@@ -25,12 +25,7 @@
     }
 
     &--slider {
-        flex-direction: column;
-        justify-content: flex-start;
-        top: 0;
-        left: 0;
-        right: auto;
-        bottom: auto; 
+        position: static;
     }
 
     &--product-list {
