--- a/assets/styles/frontend/common/components/in/tab.less
+++ b/assets/styles/frontend/common/components/in/tab.less
@@ -150,6 +150,20 @@
                 font-size: 16px;
             }
 
+            &__subtitle {
+                line-height: 30px;
+                margin: 0 0 15px;
+
+                text-transform: uppercase;
+                font-size: @font-size-big;
+                font-weight: 700;
+                color: rgba(0,43,65,0.5);
+
+                &__info {
+                    color: @color-base;
+                }
+            }
+
             &__text {
                 line-height: 42px;
                 margin: 0 0 40px;
