--- a/templates/Front/Content/Default/index.html.twig
+++ b/templates/Front/Content/Default/index.html.twig
@@ -42,7 +42,7 @@
                         {{ 'Vybíráme to nejlepší'|trans }}
                     </h1>
                     <div class="box-top-products__in">
-                        {{ productList.horizontalList(topProducts, "list-top-products", 'h3', 'top-products', false) }}
+                        {{ productList.horizontalList(topProducts, 'h3', 'top-products', false) }}
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                         {{ 'Cenová bomba'|trans }}
                     </h1>
                     <div class="box-top-products__in">
-                        {{ productList.horizontalList(priceBombProducts, "list-top-products", 'h3', 'top-products', false) }}
+                        {{ productList.horizontalList(priceBombProducts, 'h3', 'top-products', false) }}
                     </div>
                 </div>
             </div>
