--- a/templates/Front/Content/Product/boxTabs.html.twig
+++ b/templates/Front/Content/Product/boxTabs.html.twig
@@ -30,6 +30,10 @@
                         </div>
                         <div class="in-tab__content__item in-tab__content__item--without-gap js-tabs-content active" data-tab-id="description">
                             <p class="in-tab__content__item__text">{{ product.getShortDescription(domain.id)|raw }}</p>
+                            <p class="in-tab__content__item__subtitle">
+                                <span class="in-tab__content__item__subtitle__info">{{ 'Popis'|trans }}</span>
+                                {{ product.getSeoH1(domain.id)|default(product.name) }}
+                            </p>
                             <div class="in-user-text" itemprop="description">
                                 {% if product.getDescription(domain.id) %}
                                     <p>
